Add JUBE patches mode
This workflow is designed to test various git .patches on the same HEAD. This can be particularly useful when comparing multiple optimisations, or incremental improvements on the same optimisation. These patches must apply cleanly and successfully.

The workflow is as follows:
• git stash
• git apply a patch
• compile & benchmark
• repeat until out of patches
• git stash pop

--- a/benchmark/include/include_fileset_substituteset.yml
+++ b/benchmark/include/include_fileset_substituteset.yml
@@ -12,6 +12,7 @@ substituteset:
     - {source: "${{ CLOUDSC_HOME }}", dest: $cloudsc_home}
     - {source: "${{ JUBE_WP_ABSPATH }}", dest: $jube_wp_abspath}
     - {source: "${{ ARCH }}", dest: $arch}
+    - { source: "${{ PATCH }}", dest: $patch }
     - {source: "${{ PRECISION_FLAG }}", dest: $precision_flag}
     - {source: "${{ IO_LIBRARY_FLAG }}", dest: $io_library_flag}
     - {source: "${{ MPI_FLAG }}", dest: $mpi_flag}
