--- a/benchmark/include/include_parameterset.yml
+++ b/benchmark/include/include_parameterset.yml
@@ -16,9 +16,13 @@ parameterset:
   - name: build_set
     parameter:
       # Patch list
+
+      # Put the directory containing git patches here
+      - {name: patches_dir, _: ""}
+
       - name: patch
         mode: shell
-        _: "find $patches_dir -type f | tr '\n' ', '"
+        _: "find $patches_dir -type f | tr '\n' ',' | sed 's/.$//'"
 
       # Build single (sp) or double (dp) precision (or both by choosing `dp,sp`)
       - {name: precision, tag: "sp+dp" , _: "dp,sp"}
