Loki: Update module paths for SCC-CUF transformations

--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -53,7 +53,7 @@ expand = true
 # Please note that these are intended for eventual refactoring!
 [transformations.cuf-hoist]
   classname = 'SccCufTransformation'
-  module = 'transformations.scc_cuf'
+  module = 'loki.transformations.single_column'
 [transformations.cuf-hoist.options]
   transformation_type = 'hoist'
   horizontal = '%dimensions.horizontal%'
@@ -63,7 +63,7 @@ expand = true
 
 [transformations.cuf-dynamic]
   classname = 'SccCufTransformation'
-  module = 'transformations.scc_cuf'
+  module = 'loki.transformations.single_column'
 [transformations.cuf-dynamic.options]
   transformation_type = 'dynamic'
   horizontal = '%dimensions.horizontal%'
@@ -73,7 +73,7 @@ expand = true
 
 [transformations.cuf-parametrise]
   classname = 'SccCufTransformation'
-  module = 'transformations.scc_cuf'
+  module = 'loki.transformations.single_column'
 [transformations.cuf-parametrise.options]
   transformation_type = 'parametrise'
   horizontal = '%dimensions.horizontal%'
@@ -84,5 +84,5 @@ expand = true
 # For SCC-CUF-parametrise we need to define the
 # in-source replacement via "dic2p".
 [transformations.ParametriseTransformation]
-  module = 'loki.transform'
+  module = 'loki.transformations'
   options = { dic2p = {NLEV = 137} }
