Loki: Add new variant for scc-raw-stack transformtion

--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -85,3 +85,14 @@ frontend = 'FP'
   block_dim = '%dimensions.block_dim%'
   directive = 'openacc'
   check_bounds = false
+
+
+[transformations.scc-raw-stack]
+  classname = 'SCCRawStackPipeline'
+  module = 'loki.transformations.single_column'
+[transformations.scc-raw-stack.options]
+  horizontal = '%dimensions.horizontal%'
+  block_dim = '%dimensions.block_dim%'
+  directive = 'openacc'
+  check_bounds = false
+  driver_horizontal = 'NPROMA'
