Loki: Add primary configurations for SCC pipelines to config file

--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -52,3 +52,36 @@ frontend = 'FP'
 
 [frontend_args."yoecldp.F90"]
 frontend = 'FP'
+
+# Define specific transformation settings
+[transformations]
+
+# Loki-SCC family
+# -----------------------------------------
+
+[transformations.scc]
+  classname = 'SCCVectorPipeline'
+  module = 'loki.transformations.single_column'
+[transformations.scc.options]
+  horizontal = '%dimensions.horizontal%'
+  block_dim = '%dimensions.block_dim%'
+  directive = 'openacc'
+
+
+[transformations.scc-hoist]
+  classname = 'SCCHoistPipeline'
+  module = 'loki.transformations.single_column'
+[transformations.scc-hoist.options]
+  horizontal = '%dimensions.horizontal%'
+  block_dim = '%dimensions.block_dim%'
+  directive = 'openacc'
+
+
+[transformations.scc-stack]
+  classname = 'SCCStackPipeline'
+  module = 'loki.transformations.single_column'
+[transformations.scc-stack.options]
+  horizontal = '%dimensions.horizontal%'
+  block_dim = '%dimensions.block_dim%'
+  directive = 'openacc'
+  check_bounds = false
