Loki: Add primary configurations for SCC pipelines to config file

--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -52,3 +52,35 @@ frontend = 'FP'
 
 [frontend_args."yoecldp.F90"]
 frontend = 'FP'
+
+# Define specific transformation settings
+[transformations]
+
+# Loki-SCC family
+# -----------------------------------------
+[transformations.SCCVector]
+  classname = 'SCCVectorPipeline'
+  module = 'loki.transformations.single_column'
+[transformations.SCCVector.options]
+  horizontal = '%dimensions.horizontal%'
+  block_dim = '%dimensions.block_dim%'
+  directive = 'openacc'
+
+
+[transformations.SCCHoist]
+  classname = 'SCCHoistPipeline'
+  module = 'loki.transformations.single_column'
+[transformations.SCCHoist.options]
+  horizontal = '%dimensions.horizontal%'
+  block_dim = '%dimensions.block_dim%'
+  directive = 'openacc'
+
+
+[transformations.SCCStack]
+  classname = 'SCCStackPipeline'
+  module = 'loki.transformations.single_column'
+[transformations.SCCStack.options]
+  horizontal = '%dimensions.horizontal%'
+  block_dim = '%dimensions.block_dim%'
+  directive = 'openacc'
+  check_bounds = false
