enable MultiField for Atlas data structures, switch temporary to an Atlas branch until -develop- becomes merged

--- a/bundle.yml
+++ b/bundle.yml
@@ -66,7 +66,7 @@ projects :
 
     - atlas :
         git     : https://github.com/ecmwf/atlas
-        version : develop
+        version : feature/gpu_discontiguous_data
         optional: true
         require : ecbuild eckit fckit
         cmake   : >
