Introduce new modes and some changes for transpilation via Loki

--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -9,7 +9,7 @@ enable_imports = true  # Chase dependencies incurred via imports
 # do not attempt to look up the source files for these.
 disable = [
     'timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop',
-    'ceiling', 'dim3', 'cuda*', 'yoethf_cuf', 'yomcst_cuf',
+    'ceiling', 'ceil', 'dim3', 'cuda*', 'yoethf_cuf', 'yomcst_cuf',
 ]
 
 # Prune the tree for these to ensure they are not processed by transformations
@@ -40,10 +40,10 @@ expand = true
   size = 'NGPBLKS'
   index = 'IBL'
   aliases = ['JKGLO']
-
+  index_aliases = ['JKGLO']
 
 # Define specific transformation settings
-[transformations]
+# [transformations]
 
 # Loki-SCC-CUF family
 # -----------------------------------------
@@ -51,38 +51,38 @@ expand = true
 # and provide the names of derived types for extracting device code.
 #
 # Please note that these are intended for eventual refactoring!
-[transformations.cuf-hoist]
-  classname = 'SccCufTransformation'
-  module = 'transformations.scc_cuf'
-[transformations.cuf-hoist.options]
-  transformation_type = 'hoist'
-  horizontal = '%dimensions.horizontal%'
-  vertical = '%dimensions.vertical%'
-  block_dim = '%dimensions.block_dim%'
-  derived_types = ['TECLDP']
+# [transformations.cuf-hoist]
+#   classname = 'SccCufTransformation'
+#   module = 'loki.transformations.single_column.scc_cuf'
+# [transformations.cuf-hoist.options]
+#   transformation_type = 'hoist'
+#   horizontal = '%dimensions.horizontal%'
+#   vertical = '%dimensions.vertical%'
+#   block_dim = '%dimensions.block_dim%'
+#   derived_types = ['TECLDP']
 
-[transformations.cuf-dynamic]
-  classname = 'SccCufTransformation'
-  module = 'transformations.scc_cuf'
-[transformations.cuf-dynamic.options]
-  transformation_type = 'dynamic'
-  horizontal = '%dimensions.horizontal%'
-  vertical = '%dimensions.vertical%'
-  block_dim = '%dimensions.block_dim%'
-  derived_types = ['TECLDP']
+# [transformations.cuf-dynamic]
+#   classname = 'SccCufTransformation'
+#   module = 'loki.transformations.single_column.scc_cuf'
+# [transformations.cuf-dynamic.options]
+#   transformation_type = 'dynamic'
+#   horizontal = '%dimensions.horizontal%'
+#   vertical = '%dimensions.vertical%'
+#   block_dim = '%dimensions.block_dim%'
+#   derived_types = ['TECLDP']
 
-[transformations.cuf-parametrise]
-  classname = 'SccCufTransformation'
-  module = 'transformations.scc_cuf'
-[transformations.cuf-parametrise.options]
-  transformation_type = 'parametrise'
-  horizontal = '%dimensions.horizontal%'
-  vertical = '%dimensions.vertical%'
-  block_dim = '%dimensions.block_dim%'
-  derived_types = ['TECLDP']
+# [transformations.cuf-parametrise]
+#   classname = 'SccCufTransformation'
+#   module = 'loki.transformations.single_column.scc_cuf'
+# [transformations.cuf-parametrise.options]
+#   transformation_type = 'parametrise'
+#   horizontal = '%dimensions.horizontal%'
+#   vertical = '%dimensions.vertical%'
+#   block_dim = '%dimensions.block_dim%'
+#   derived_types = ['TECLDP']
 
 # For SCC-CUF-parametrise we need to define the
 # in-source replacement via "dic2p".
-[transformations.ParametriseTransformation]
-  module = 'loki.transform'
-  options = { dic2p = {NLEV = 137} }
+# [transformations.ParametriseTransformation]
+#   module = 'loki.transformations.parametrise'
+#   options = { dic2p = {NLEV = 137} }
