--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -36,7 +36,8 @@ ignore = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
 [dimensions.block_dim]
   size = 'NGPBLKS'
   index = 'IBL'
-
+  aliases = ['JKGLO']
+  index_aliases = ['JKGLO']
 
 # Overwrite frontend for header modules that cannot be parsed via OMNI
 [frontend_args]
