--- a/src/cloudsc_loki/CMakeLists.txt
+++ b/src/cloudsc_loki/CMakeLists.txt
@@ -111,6 +111,88 @@ if( HAVE_CLOUDSC_LOKI )
         CONDITION HAVE_OMP AND HAVE_MPI
     )
 
+    ####################################################
+    ##  Idempotence mode with lowering block loop     ##
+    ##   * Internal "do-nothing" mode for Loki debug  ##
+    ####################################################
+
+    loki_transform(
+        COMMAND convert
+        OUTPUT
+            loki-idem-lower/cloudsc.idem_lower.F90
+            loki-idem-lower/cloudsc_driver_loki_mod.idem_lower.F90
+        BUILDDIR ${CMAKE_CURRENT_BINARY_DIR}/loki-idem-lower
+        DEPENDS
+            cloudsc.F90
+            cloudsc_driver_loki_mod.F90
+            ${_OMNI_DEPENDENCIES}
+        MODE idem-lower
+        CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/cloudsc_loki.config
+        CPP
+        DEFINITIONS
+            ${CLOUDSC_DEFINE_STMT_FUNC}
+        FRONTEND ${LOKI_FRONTEND}
+        SOURCES
+            ${CMAKE_CURRENT_SOURCE_DIR}
+            ${COMMON_MODULE}
+        INCLUDES
+            ${COMMON_INCLUDE}
+        XMOD
+            ${_TARGET_XMOD_DIR}
+            ${XMOD_DIR}
+    )
+
+    ecbuild_add_executable( TARGET dwarf-cloudsc-loki-idem-lower
+        SOURCES
+            dwarf_cloudsc.F90
+            loki-idem-lower/cloudsc_driver_loki_mod.idem_lower.F90
+            loki-idem-lower/cloudsc.idem_lower.F90
+        LIBS
+            cloudsc-common-lib
+        DEFINITIONS ${CLOUDSC_DEFINITIONS}
+    )
+
+    ####################################################
+    ##  Idempotence mode with lowering block loop     ##
+    ##   * Internal "do-nothing" mode for Loki debug  ##
+    ####################################################
+
+    loki_transform(
+        COMMAND convert
+        OUTPUT
+            loki-idem-lower-loop/cloudsc.idem_lower_loop.F90
+            loki-idem-lower-loop/cloudsc_driver_loki_mod.idem_lower_loop.F90
+        BUILDDIR ${CMAKE_CURRENT_BINARY_DIR}/loki-idem-lower-loop
+        DEPENDS
+            cloudsc.F90
+            cloudsc_driver_loki_mod.F90
+            ${_OMNI_DEPENDENCIES}
+        MODE idem-lower-loop
+        CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/cloudsc_loki.config
+        CPP
+        DEFINITIONS
+            ${CLOUDSC_DEFINE_STMT_FUNC}
+        FRONTEND ${LOKI_FRONTEND}
+        SOURCES
+            ${CMAKE_CURRENT_SOURCE_DIR}
+            ${COMMON_MODULE}
+        INCLUDES
+            ${COMMON_INCLUDE}
+        XMOD
+            ${_TARGET_XMOD_DIR}
+            ${XMOD_DIR}
+    )
+
+    ecbuild_add_executable( TARGET dwarf-cloudsc-loki-idem-lower-loop
+        SOURCES
+            dwarf_cloudsc.F90
+            loki-idem-lower-loop/cloudsc_driver_loki_mod.idem_lower_loop.F90
+            loki-idem-lower-loop/cloudsc.idem_lower_loop.F90
+        LIBS
+            cloudsc-common-lib
+        DEFINITIONS ${CLOUDSC_DEFINITIONS}
+    )
+
     ############################################################
     ##  Idempotence mode with pool-allocator for temporaries: ##
     ##   * Internal "do-nothing" mode for Loki debug          ##
@@ -620,7 +702,7 @@ if( HAVE_CUDA )
             ${COMMON_MODULE}/yoethf.F90
             ${COMMON_MODULE}/yoecldp.F90
         INCLUDES ${COMMON_INCLUDE}
-        DEFINITIONS CLOUDSC_GPU_TIMING
+        DEFINITIONS CLOUDSC_GPU_TIMING CUF_IMPORTS
         DATA_OFFLOAD REMOVE_OPENMP
         XMOD ${_TARGET_XMOD_DIR} ${XMOD_DIR}
         OUTPATH ${CMAKE_CURRENT_BINARY_DIR}/loki-scc-cuf-parametrise
@@ -667,7 +749,7 @@ if( HAVE_CUDA )
             ${COMMON_MODULE}/yoethf.F90
             ${COMMON_MODULE}/yoecldp.F90
         INCLUDES ${COMMON_INCLUDE}
-        DEFINITIONS CLOUDSC_GPU_TIMING
+	DEFINITIONS CLOUDSC_GPU_TIMING CUF_IMPORTS
         DATA_OFFLOAD REMOVE_OPENMP
         XMOD ${_TARGET_XMOD_DIR} ${XMOD_DIR}
         OUTPATH ${CMAKE_CURRENT_BINARY_DIR}/loki-scc-cuf-hoist
@@ -702,6 +784,161 @@ if( HAVE_CUDA )
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../../..
         OMP 1
     )
+
+ #### CUDA PARAMETRISE #####
+    # cloudsc_xmod( loki-c-scc-hoist )
+
+    loki_transform_convert(
+        MODE cuda-parametrise FRONTEND ${LOKI_FRONTEND} CPP
+        CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/cloudsc_cuf_loki.config
+        # CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/cloudsc_cuf_loki.config
+        PATH ${CMAKE_CURRENT_SOURCE_DIR}
+        HEADERS
+                ${COMMON_MODULE}/parkind1.F90
+                ${COMMON_MODULE}/yomphyder.F90
+                ${COMMON_MODULE}/yomcst.F90
+                ${COMMON_MODULE}/yoethf.F90
+                ${COMMON_MODULE}/yoecldp.F90
+                ${COMMON_MODULE}/fcttre_mod.F90
+                ${COMMON_MODULE}/fccld_mod.F90
+        INCLUDES ${COMMON_INCLUDE}
+        # DEFINITIONS CLOUDSC_GPU_TIMING ${CLOUDSC_DEFINE_STMT_FUNC}
+        DEFINITIONS CLOUDSC_GPU_TIMING
+        DATA_OFFLOAD REMOVE_OPENMP
+        XMOD ${_TARGET_XMOD_DIR} ${XMOD_DIR}
+        OUTPATH ${CMAKE_CURRENT_BINARY_DIR}/loki-c-scc-parametrise
+        OUTPUT
+            loki-c-scc-parametrise/cuf_cloudsc_driver_loki_mod.cuda_parametrise.F90
+            # loki-c-scc-hoist/cuf_cloudsc.cuda_hoist.F90
+            loki-c-scc-parametrise/cloudsc_cuf_fc.F90 loki-c-scc-parametrise/cloudsc_cuf_c.c
+            loki-c-scc-parametrise/yoethf_fc.F90 loki-c-scc-parametrise/yomcst_fc.F90
+            loki-c-scc-parametrise/yoecldp_fc.F90
+        DEPENDS cuf_cloudsc.F90 cuf_cloudsc_driver_loki_mod.F90 ${_OMNI_DEPENDENCIES}
+    )
+
+
+      ecbuild_add_library(
+        TARGET dwarf-cloudsc-scc-parametrise-gpu-lib
+        INSTALL_HEADERS LISTED
+        SOURCES
+            # yoecldp_c.h
+            loki-c-scc-parametrise/cloudsc_cuf_c.c
+            loki-c-scc-parametrise/cloudsc_cuf_fc.F90
+            PUBLIC_INCLUDES
+                $<INSTALL_INTERFACE:include>
+                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
+            PUBLIC_LIBS
+                cloudsc-common-lib
+    )
+
+    target_include_directories(dwarf-cloudsc-scc-parametrise-gpu-lib PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
+
+    set_source_files_properties(loki-c-scc-parametrise/cloudsc_cuf_c.c PROPERTIES LANGUAGE CUDA)
+
+   target_compile_options(dwarf-cloudsc-scc-parametrise-gpu-lib PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
+           --generate-line-info
+           >)
+
+
+      cloudsc_add_compile_options(
+         SOURCES dwarf_cloudsc.F90
+         FLAGS   "-cuda") # -gpu=maxrregcount ...
+    target_include_directories(
+        dwarf-cloudsc-scc-parametrise-gpu-lib
+        PUBLIC
+        ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
+    )
+
+    ecbuild_add_executable(
+        TARGET  dwarf-cloudsc-loki-scc-parametrise-cuda
+        SOURCES dwarf_cloudsc.F90 loki-c-scc-parametrise/cuf_cloudsc_driver_loki_mod.cuda_parametrise.F90
+        LIBS dwarf-cloudsc-scc-parametrise-gpu-lib
+    )
+
+    target_compile_definitions(dwarf-cloudsc-loki-scc-parametrise-cuda PUBLIC CUF_DRIVER=1)
+
+    set_target_properties(dwarf-cloudsc-loki-scc-parametrise-cuda PROPERTIES LINKER_LANGUAGE Fortran)
+
+    set_target_properties( dwarf-cloudsc-loki-scc-parametrise-cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+    target_link_libraries(dwarf-cloudsc-loki-scc-parametrise-cuda dwarf-cloudsc-scc-parametrise-gpu-lib cudadevrt cudart)
+
+
+   #### CUDA HOIST #####
+    # cloudsc_xmod( loki-c-scc-hoist )
+
+    loki_transform_convert(
+        MODE cuda-hoist FRONTEND ${LOKI_FRONTEND} CPP
+        CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/cloudsc_cuf_loki.config
+        # CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/cloudsc_cuf_loki.config
+        PATH ${CMAKE_CURRENT_SOURCE_DIR}
+        HEADERS
+                ${COMMON_MODULE}/parkind1.F90
+                ${COMMON_MODULE}/yomphyder.F90
+                ${COMMON_MODULE}/yomcst.F90
+                ${COMMON_MODULE}/yoethf.F90
+                ${COMMON_MODULE}/yoecldp.F90
+                ${COMMON_MODULE}/fcttre_mod.F90
+                ${COMMON_MODULE}/fccld_mod.F90
+        INCLUDES ${COMMON_INCLUDE}
+        # DEFINITIONS CLOUDSC_GPU_TIMING ${CLOUDSC_DEFINE_STMT_FUNC}
+        DEFINITIONS CLOUDSC_GPU_TIMING
+        DATA_OFFLOAD REMOVE_OPENMP
+        XMOD ${_TARGET_XMOD_DIR} ${XMOD_DIR}
+        OUTPATH ${CMAKE_CURRENT_BINARY_DIR}/loki-c-scc-hoist
+        OUTPUT
+            loki-c-scc-hoist/cuf_cloudsc_driver_loki_mod.cuda_hoist.F90
+            # loki-c-scc-hoist/cuf_cloudsc.cuda_hoist.F90
+            loki-c-scc-hoist/cloudsc_cuf_fc.F90 loki-c-scc-hoist/cloudsc_cuf_c.c
+            loki-c-scc-hoist/yoethf_fc.F90 loki-c-scc-hoist/yomcst_fc.F90
+            loki-c-scc-hoist/yoecldp_fc.F90
+        DEPENDS cuf_cloudsc.F90 cuf_cloudsc_driver_loki_mod.F90 ${_OMNI_DEPENDENCIES}
+    )
+
+
+      ecbuild_add_library(
+        TARGET dwarf-cloudsc-scc-hoist-gpu-lib
+        INSTALL_HEADERS LISTED
+        SOURCES
+            # yoecldp_c.h
+            loki-c-scc-hoist/cloudsc_cuf_c.c
+            loki-c-scc-hoist/cloudsc_cuf_fc.F90
+            PUBLIC_INCLUDES
+                $<INSTALL_INTERFACE:include>
+                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
+            PUBLIC_LIBS
+                cloudsc-common-lib
+    )
+
+    target_include_directories(dwarf-cloudsc-scc-hoist-gpu-lib PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
+
+    set_source_files_properties(loki-c-scc-hoist/cloudsc_cuf_c.c PROPERTIES LANGUAGE CUDA)
+
+   target_compile_options(dwarf-cloudsc-scc-hoist-gpu-lib PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
+           --generate-line-info
+           >)
+
+
+      cloudsc_add_compile_options(
+         SOURCES dwarf_cloudsc.F90
+         FLAGS   "-cuda") # -gpu=maxrregcount ...
+    target_include_directories(
+        dwarf-cloudsc-scc-hoist-gpu-lib
+        PUBLIC
+        ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
+    )
+
+    ecbuild_add_executable(
+        TARGET  dwarf-cloudsc-loki-scc-hoist-cuda
+        SOURCES dwarf_cloudsc.F90 loki-c-scc-hoist/cuf_cloudsc_driver_loki_mod.cuda_hoist.F90
+        LIBS dwarf-cloudsc-scc-hoist-gpu-lib
+    )
+
+    target_compile_definitions(dwarf-cloudsc-loki-scc-hoist-cuda PUBLIC CUF_DRIVER=1)
+
+    set_target_properties(dwarf-cloudsc-loki-scc-hoist-cuda PROPERTIES LINKER_LANGUAGE Fortran)
+
+    set_target_properties( dwarf-cloudsc-loki-scc-hoist-cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+    target_link_libraries(dwarf-cloudsc-loki-scc-hoist-cuda dwarf-cloudsc-scc-hoist-gpu-lib cudadevrt cudart)
 
 endif()
 
