--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -7,10 +7,14 @@ enable_imports = true  # Chase dependencies incurred via imports
 
 # Ensure that we are never adding these to the tree, and thus
 # do not attempt to look up the source files for these.
-disable = ['timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop']
+disable = ['timer_mod', 'abort', 'file_io_mod', 'foe*', 'fokoop',
+    'ceiling', 'dim3', 'cuda*', 'yoethf_cuf', 'yomcst_cuf',
+    'parkind1'
+]
 
 # Prune the tree for these to ensure they are not processed by transformations
-ignore = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
+# ignore = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
+ignore = ['yomphyder', 'yoecldp', 'fc*_mod']
 
 # Define entry point for call-tree transformation
 [routines]
@@ -36,6 +40,7 @@ ignore = ['parkind1', 'yomphyder', 'yoecldp', 'fc*_mod']
 [dimensions.block_dim]
   size = 'NGPBLKS'
   index = 'IBL'
+  aliases = ['JKGLO']
 
 
 # Overwrite frontend for header modules that cannot be parsed via OMNI
@@ -52,3 +57,49 @@ frontend = 'FP'
 
 [frontend_args."yoecldp.F90"]
 frontend = 'FP'
+
+
+# Define specific transformation settings
+[transformations]
+
+# Loki-SCC-CUF family
+# -----------------------------------------
+# For these, we need to explicitly define the "transformation_type"
+# and provide the names of derived types for extracting device code.
+#
+# Please note that these are intended for eventual refactoring!
+[transformations.cuf-hoist]
+  classname = 'SccCufTransformation'
+  module = 'loki.transformations.single_column.scc_cuf'
+[transformations.cuf-hoist.options]
+  transformation_type = 'hoist'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+
+[transformations.cuf-dynamic]
+  classname = 'SccCufTransformation'
+  module = 'loki.transformations.single_column.scc_cuf'
+[transformations.cuf-dynamic.options]
+  transformation_type = 'dynamic'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+
+[transformations.cuf-parametrise]
+  classname = 'SccCufTransformation'
+  module = 'loki.transformations.single_column.scc_cuf'
+[transformations.cuf-parametrise.options]
+  transformation_type = 'parametrise'
+  horizontal = '%dimensions.horizontal%'
+  vertical = '%dimensions.vertical%'
+  block_dim = '%dimensions.block_dim%'
+  derived_types = ['TECLDP']
+
+# For SCC-CUF-parametrise we need to define the
+# in-source replacement via "dic2p".
+[transformations.ParametriseTransformation]
+  module = 'loki.transformations.parametrise'
+  options = { dic2p = {NLEV = 137} }
