blocked memory transfers for k cache and std OpenACC variants

--- a/bundle.yml
+++ b/bundle.yml
@@ -95,8 +95,10 @@ options :
         help  : Enable GPU kernels
         cmake : >
             ENABLE_CLOUDSC_GPU_SCC=ON
+            ENABLE_CLOUDSC_GPU_SCC_DBLK=ON
             ENABLE_CLOUDSC_GPU_SCC_HOIST=ON
             ENABLE_CLOUDSC_GPU_SCC_K_CACHING=ON
+            ENABLE_CLOUDSC_GPU_SCC_DBLK_K_CACHING=ON
             ENABLE_CLOUDSC_GPU_OMP_SCC_HOIST=ON
 
     - with-cuda :
