Loki: Add housekeeping transformations and define SCC pipelines

--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -84,3 +84,43 @@ frontend = 'FP'
   block_dim = '%dimensions.block_dim%'
   directive = 'openacc'
   check_bounds = false
+
+
+# Housekeeping and other transformations
+# -----------------------------------------
+[transformations.DataOffload]
+  classname = 'DataOffloadTransformation'
+  module = 'loki.transformations'
+  options = { remove_openmp = true, claw_data_offload = false }
+
+
+[transformations.Sanitise]
+  classname = 'SanitiseTransformation'
+  module = 'loki.transformations'
+  options = { resolve_associate_mappings = true }
+
+
+[transformations.ModuleWrap]
+  classname = 'ModuleWrapTransformation'
+  module = 'loki.transformations.build_system'
+  options = { module_suffix = '_MOD' }
+
+
+[transformations.Dependency]
+  classname = 'DependencyTransformation'
+  module = 'loki.transformations.build_system'
+  options = { suffix = '_LOKI', module_suffix = '_MOD' }
+
+
+# Full transformation pipelines
+# -----------------------------------------
+[pipelines]
+
+[pipelines.scc]
+  transformations = ['DataOffload', 'SCCVector', 'ModuleWrap', 'Dependency']
+
+[pipelines.scc-hoist]
+  transformations = ['DataOffload', 'SCCHoist', 'ModuleWrap', 'Dependency']
+
+[pipelines.scc-stack]
+  transformations = ['DataOffload', 'Sanitise', 'SCCStack', 'ModuleWrap', 'Dependency']
