Loki: Use config file definition for Idem/SCA/CLAW variants

--- a/src/cloudsc_loki/CMakeLists.txt
+++ b/src/cloudsc_loki/CMakeLists.txt
@@ -76,6 +76,10 @@ if( HAVE_CLOUDSC_LOKI )
             cloudsc-common-lib
         DEFINITIONS ${CLOUDSC_DEFINITIONS}
     )
+    # Set specific module directory to avoid aliasing of .mod files
+    set_target_properties(  dwarf-cloudsc-loki-idem
+    	PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/loki-idem
+    )
 
     ecbuild_add_test(
         TARGET dwarf-cloudsc-loki-idem-serial
@@ -151,6 +155,11 @@ if( HAVE_CLOUDSC_LOKI )
             cloudsc-common-lib
         DEFINITIONS ${CLOUDSC_DEFINITIONS}
     )
+    # Set specific module directory to avoid aliasing of .mod files
+    set_target_properties(  dwarf-cloudsc-loki-idem-stack
+    	PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/loki-idem-stack
+    )
+
 
     if( CMAKE_Fortran_COMPILER_ID MATCHES "GNU")
         target_compile_options( dwarf-cloudsc-loki-idem-stack PRIVATE "-fcray-pointer" )
@@ -233,6 +242,10 @@ if( HAVE_CLOUDSC_LOKI )
             cloudsc-common-lib
         DEFINITIONS ${CLOUDSC_DEFINITIONS}
     )
+    # Set specific module directory to avoid aliasing of .mod files
+    set_target_properties(  dwarf-cloudsc-loki-sca
+    	PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/loki-sca
+    )
 
     ecbuild_add_test(
         TARGET dwarf-cloudsc-loki-sca-serial
@@ -261,14 +274,14 @@ if( HAVE_CLOUDSC_LOKI )
         loki_transform(
             COMMAND convert
             OUTPUT
-                loki-claw-cpu/cloudsc.claw.F90
-                loki-claw-cpu/cloudsc_driver_loki_mod.claw.F90
+                loki-claw-cpu/cloudsc.claw_cpu.F90
+                loki-claw-cpu/cloudsc_driver_loki_mod.claw_cpu.F90
             BUILDDIR ${CMAKE_CURRENT_BINARY_DIR}/loki-claw-cpu
             DEPENDS
                 cloudsc.F90
                 cloudsc_driver_loki_mod.F90
                 ${_OMNI_DEPENDENCIES}
-            MODE claw
+            MODE claw-cpu
             CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/cloudsc_loki.config
             CPP
             DEFINITIONS
@@ -291,27 +304,31 @@ if( HAVE_CLOUDSC_LOKI )
             TARGET cpu DIRECTIVE none
             INCLUDES ${COMMON_INCLUDE}
             XMOD ${_TARGET_XMOD_DIR} ${XMOD_DIR}
-            SOURCE loki-claw-cpu/cloudsc.claw.F90
-            OUTPUT loki-claw-cpu/cloudsc.claw.cpu.F90
+            SOURCE loki-claw-cpu/cloudsc.claw_cpu.F90
+            OUTPUT loki-claw-cpu/cloudsc.claw_cpu.cpu.F90
         )
         claw_compile(
             MODEL_CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/claw_cloudsc.config
             TARGET cpu DIRECTIVE none
             INCLUDES ${COMMON_INCLUDE}
             XMOD ${_TARGET_XMOD_DIR} ${XMOD_DIR}
-            SOURCE loki-claw-cpu/cloudsc_driver_loki_mod.claw.F90
-            OUTPUT loki-claw-cpu/cloudsc_driver_loki_mod.claw.cpu.F90
-            DEPENDS loki-claw-cpu/cloudsc.claw.cpu.F90
+            SOURCE loki-claw-cpu/cloudsc_driver_loki_mod.claw_cpu.F90
+            OUTPUT loki-claw-cpu/cloudsc_driver_loki_mod.claw_cpu.cpu.F90
+            DEPENDS loki-claw-cpu/cloudsc.claw_cpu.cpu.F90
         )
 
         ecbuild_add_executable( TARGET dwarf-cloudsc-loki-claw-cpu
             SOURCES
                 dwarf_cloudsc.F90
-                loki-claw-cpu/cloudsc_driver_loki_mod.claw.cpu.F90
-                loki-claw-cpu/cloudsc.claw.cpu.F90
+                loki-claw-cpu/cloudsc_driver_loki_mod.claw_cpu.cpu.F90
+                loki-claw-cpu/cloudsc.claw_cpu.cpu.F90
             LIBS
                 cloudsc-common-lib
             DEFINITIONS ${CLOUDSC_DEFINITIONS}
+        )
+        # Set specific module directory to avoid aliasing of .mod files
+        set_target_properties(  dwarf-cloudsc-loki-claw-cpu
+            PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/loki-claw-cpu
         )
 
         ecbuild_add_test(
@@ -362,18 +379,16 @@ if( HAVE_CLOUDSC_LOKI )
         loki_transform(
             COMMAND convert
             OUTPUT
-                loki-claw-gpu/cloudsc.claw.F90
-                loki-claw-gpu/cloudsc_driver_loki_mod.claw.F90
+                loki-claw-gpu/cloudsc.claw_gpu.F90
+                loki-claw-gpu/cloudsc_driver_loki_mod.claw_gpu.F90
             BUILDDIR ${CMAKE_CURRENT_BINARY_DIR}/loki-claw-gpu
             DEPENDS
                 cloudsc.F90
                 cloudsc_driver_loki_mod.F90
                 ${_OMNI_DEPENDENCIES}
-            MODE claw
+            MODE claw-gpu
             CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/cloudsc_loki.config
             CPP
-            DATA_OFFLOAD
-            REMOVE_OPENMP
             DEFINITIONS
                 CLOUDSC_GPU_TIMING
                 ${CLOUDSC_DEFINE_STMT_FUNC}
@@ -393,27 +408,31 @@ if( HAVE_CLOUDSC_LOKI )
             TARGET gpu DIRECTIVE openacc
             INCLUDES ${COMMON_INCLUDE}
             XMOD ${_TARGET_XMOD_DIR} ${XMOD_DIR}
-            SOURCE loki-claw-gpu/cloudsc.claw.F90
-            OUTPUT loki-claw-gpu/cloudsc.claw.gpu.F90
+            SOURCE loki-claw-gpu/cloudsc.claw_gpu.F90
+            OUTPUT loki-claw-gpu/cloudsc.claw_gpu.gpu.F90
         )
         claw_compile(
             MODEL_CONFIG ${CMAKE_CURRENT_SOURCE_DIR}/claw_cloudsc.config
             TARGET gpu DIRECTIVE openacc
             INCLUDES ${COMMON_INCLUDE}
             XMOD ${_TARGET_XMOD_DIR} ${XMOD_DIR}
-            SOURCE loki-claw-gpu/cloudsc_driver_loki_mod.claw.F90
-            OUTPUT loki-claw-gpu/cloudsc_driver_loki_mod.claw.gpu.F90
-            DEPENDS loki-claw-gpu/cloudsc.claw.gpu.F90
+            SOURCE loki-claw-gpu/cloudsc_driver_loki_mod.claw_gpu.F90
+            OUTPUT loki-claw-gpu/cloudsc_driver_loki_mod.claw_gpu.gpu.F90
+            DEPENDS loki-claw-gpu/cloudsc.claw_gpu.gpu.F90
         )
 
         ecbuild_add_executable( TARGET dwarf-cloudsc-loki-claw-gpu
             SOURCES
                 dwarf_cloudsc.F90
-                loki-claw-gpu/cloudsc_driver_loki_mod.claw.gpu.F90
-                loki-claw-gpu/cloudsc.claw.gpu.F90
+                loki-claw-gpu/cloudsc_driver_loki_mod.claw_gpu.gpu.F90
+                loki-claw-gpu/cloudsc.claw_gpu.gpu.F90
             LIBS
                 cloudsc-common-lib
             DEFINITIONS ${CLOUDSC_DEFINITIONS}
+        )
+        # Set specific module directory to avoid aliasing of .mod files
+        set_target_properties(  dwarf-cloudsc-loki-claw-gpu
+            PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/loki-claw-gpu
         )
 
         ecbuild_add_test(
