--- a/src/cloudsc_loki/cloudsc_loki.config
+++ b/src/cloudsc_loki/cloudsc_loki.config
@@ -56,6 +56,35 @@ frontend = 'FP'
 # Define specific transformation settings
 [transformations]
 
+[transformations.Idem]
+  classname = 'IdemTransformation'
+  module = 'loki.transformations'
+
+
+[transformations.SCA]
+  classname = 'ExtractSCATransformation'
+  module = 'loki.transformations.single_column'
+[transformations.SCA.options]
+  horizontal = '%dimensions.horizontal%'
+
+
+[transformations.CLAW]
+  classname = 'CLAWTransformation'
+  module = 'loki.transformations.single_column'
+[transformations.CLAW.options]
+  horizontal = '%dimensions.horizontal%'
+  claw_data_offload = false
+
+
+[transformations.Stack]
+  classname = 'TemporariesPoolAllocatorTransformation'
+  module = 'loki.transformations'
+[transformations.Stack.options]
+  block_dim = '%dimensions.block_dim%'
+  directive = 'openmp'
+  check_bounds = true
+
+
 # Loki-SCC family
 # -----------------------------------------
 [transformations.SCCVector]
@@ -115,6 +144,21 @@ frontend = 'FP'
 # Full transformation pipelines
 # -----------------------------------------
 [pipelines]
+
+[pipelines.idem]
+  transformations = ['Idem', 'ModuleWrap', 'Dependency']
+
+[pipelines.idem-stack]
+  transformations = ['Idem', 'Sanitise', 'Stack', 'ModuleWrap', 'Dependency']
+
+[pipelines.sca]
+  transformations = ['SCA', 'ModuleWrap', 'Dependency']
+
+[pipelines.claw-cpu]
+  transformations = ['CLAW', 'ModuleWrap', 'Dependency']
+
+[pipelines.claw-gpu]
+  transformations = ['DataOffload', 'CLAW', 'ModuleWrap', 'Dependency']
 
 [pipelines.scc]
   transformations = ['DataOffload', 'SCCVector', 'ModuleWrap', 'Dependency']
