Bundle: Point Loki to latest main branch

--- a/bundle.yml
+++ b/bundle.yml
@@ -35,7 +35,7 @@ projects :
 
     - loki :
         git     : https://github.com/ecmwf-ifs/loki
-        version : v0.2.6
+        version : main
         require : ecbuild
         cmake   : >
             LOKI_ENABLE_TESTS=OFF
