Loki: Use config file definitions for SCC-CUF pipelines

--- a/src/cloudsc_loki/cloudsc_cuf_loki.config
+++ b/src/cloudsc_loki/cloudsc_cuf_loki.config
@@ -51,30 +51,30 @@ expand = true
 # and provide the names of derived types for extracting device code.
 #
 # Please note that these are intended for eventual refactoring!
-[transformations.cuf-hoist]
+[transformations.SccCuf-hoist]
   classname = 'SccCufTransformation'
   module = 'loki.transformations.single_column'
-[transformations.cuf-hoist.options]
+[transformations.SccCuf-hoist.options]
   transformation_type = 'hoist'
   horizontal = '%dimensions.horizontal%'
   vertical = '%dimensions.vertical%'
   block_dim = '%dimensions.block_dim%'
   derived_types = ['TECLDP']
 
-[transformations.cuf-dynamic]
+[transformations.SccCuf-dynamic]
   classname = 'SccCufTransformation'
   module = 'loki.transformations.single_column'
-[transformations.cuf-dynamic.options]
+[transformations.SccCuf-dynamic.options]
   transformation_type = 'dynamic'
   horizontal = '%dimensions.horizontal%'
   vertical = '%dimensions.vertical%'
   block_dim = '%dimensions.block_dim%'
   derived_types = ['TECLDP']
 
-[transformations.cuf-parametrise]
+[transformations.SccCuf-parametrise]
   classname = 'SccCufTransformation'
   module = 'loki.transformations.single_column'
-[transformations.cuf-parametrise.options]
+[transformations.SccCuf-parametrise.options]
   transformation_type = 'parametrise'
   horizontal = '%dimensions.horizontal%'
   vertical = '%dimensions.vertical%'
@@ -83,6 +83,61 @@ expand = true
 
 # For SCC-CUF-parametrise we need to define the
 # in-source replacement via "dic2p".
-[transformations.ParametriseTransformation]
+[transformations.Parametrise]
+  classname = 'ParametriseTransformation'
   module = 'loki.transformations'
   options = { dic2p = {NLEV = 137} }
+
+[transformations.HoistTemporariesAnalysis]
+  classname = 'HoistTemporaryArraysAnalysis'
+  module = 'loki.transformations'
+  options = { dim_vars = ['KLEV'] }
+
+[transformations.HoistTemporariesSynthesis]
+  classname = 'HoistTemporaryArraysDeviceAllocatableTransformation'
+  module = 'loki.transformations'
+  options = { as_kwarguments = true }
+
+
+# Housekeeping and other transformations
+# -----------------------------------------
+[transformations.DataOffload]
+  classname = 'DataOffloadTransformation'
+  module = 'loki.transformations'
+  options = { remove_openmp = true, claw_data_offload = false }
+
+
+[transformations.Sanitise]
+  classname = 'SanitiseTransformation'
+  module = 'loki.transformations'
+  options = { resolve_associate_mappings = true }
+
+
+[transformations.ModuleWrap]
+  classname = 'ModuleWrapTransformation'
+  module = 'loki.transformations.build_system'
+  options = { module_suffix = '_MOD' }
+
+
+[transformations.Dependency]
+  classname = 'DependencyTransformation'
+  module = 'loki.transformations.build_system'
+  options = { suffix = '_SCC_CUF', module_suffix = '_MOD' }
+
+
+# SCC-CUF transformation pipelines
+# -----------------------------------------
+[pipelines]
+
+[pipelines.cuf-parametrise]
+  transformations = [
+    'Sanitise', 'DataOffload', 'SccCuf-parametrise',
+    'Parametrise', 'ModuleWrap', 'Dependency'
+  ]
+
+[pipelines.cuf-hoist]
+  transformations = [
+    'Sanitise', 'DataOffload', 'SccCuf-hoist',
+    'HoistTemporariesAnalysis', 'HoistTemporariesSynthesis',
+    'ModuleWrap', 'Dependency'
+  ]
